[package]
name = "summit"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dioxus = { version = "=0.6.0", features = ["router", "fullstack"] }
modwire = { version = ">=0.1.0,<1.0.0" }
once_cell = { version = ">=1.0.0,<2.0.0" }
fastrand = { version = "*" }
kore = { git = "https://github.com/unsudo-org/kore.git" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
